--- a/inex.html
+++ b/inex.html
@@ -9,6 +9,9 @@
 <body>
     
     <div id="word"></div>
+    <div id="somma-for"></div>
+    <div id="somma-while"></div>
+    <div id="dispari"></div>
 
 
 
